--- a/pages/works.html
+++ b/pages/works.html
@@ -13,7 +13,7 @@
     <section class="nav-sect">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../pages/home.html">
+              <a class="navbar-brand" href="../home.html">
                 <img src="../images/hh-logo.png" alt="logo" style="width: 3rem;">
               </a>  
     
@@ -23,7 +23,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" href="../pages/home.html">Home</a>
+                    <a class="nav-link" href="../home.html">Home</a>
                   </li>
                   <li class="nav-item" type="none">
                     <a class="nav-link active fw-bold" aria-current="page" href="../pages/works.html">Works</a>
