--- a/pages/films.html
+++ b/pages/films.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../pages/home.html">
+          <a class="navbar-brand" href="../home.html">
             <img src="../images/hh-logo.png" alt="logo" style="width: 3rem;">
           </a>  
 
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link" href="../pages/home.html">Home</a>
+                        <a class="nav-link" href="../home.html">Home</a>
                     </li>
                     <li class="nav-item" type="none">
                       <a class="nav-link" href="../pages/works.html">Works</a>
