--- a/pages/objects.html
+++ b/pages/objects.html
@@ -27,7 +27,7 @@
                           <a class="nav-link" href="../pages/works.html">Works</a>
                         </li>
                         <li class="nav-item" type="none">
-                          <a class="nav-link fw-bold" aria-current="page" href="../pages/objects.html">Objects</a>
+                          <a class="nav-link active fw-bold" aria-current="page" href="../pages/objects.html">Objects</a>
                         </li>   
                         <li class="nav-item" type="none">
                           <a class="nav-link" href="../pages/journal.html">Journal</a>
