--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="./index.html">
-                <img src="../images/hh-logo.png" alt="logo" style="width: 3rem;">
+                <img src="./images/hh-logo.png" alt="logo" style="width: 3rem;">
               </a>  
     
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,19 +27,19 @@
                     <a class="nav-link active fw-bold" aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item" type="none">
-                    <a class="nav-link" href="../pages/works.html">Works</a>
+                    <a class="nav-link" href="./pages/works.html">Works</a>
                   </li>
                   <li class="nav-item" type="none">
-                    <a class="nav-link" href="../pages/objects.html">Objects</a>
+                    <a class="nav-link" href="./pages/objects.html">Objects</a>
                   </li>   
                   <li class="nav-item" type="none">
-                    <a class="nav-link" href="../pages/journal.html">Journal</a>
+                    <a class="nav-link" href="./pages/journal.html">Journal</a>
                   </li>  
                   <li class="nav-item" type="none">
-                    <a class="nav-link" href="../pages/films.html">Films</a>
+                    <a class="nav-link" href="./pages/films.html">Films</a>
                   </li>    
                   <li class="nav-item" type="none">
-                    <a class="nav-link" href="../pages/contact.html">Contact</a>
+                    <a class="nav-link" href="./pages/contact.html">Contact</a>
                   </li>  
                 </ul>
             </div>    
@@ -48,7 +48,7 @@
     <section class="banner">
         <div class="ratio" style="--bs-aspect-ratio: 60%;">
             <video autoplay muted class="z-index = 0">
-                <source src="../images/2846069183.mp4" type="video/mp4">
+                <source src="./images/2846069183.mp4" type="video/mp4">
             </video>
             <div class="text-overlay"> 
                 <p class="text-white fs-4 fw-normal position-absolute top-50 start-0 z-index = 1 ms-5 mt-5">Hyde + Hyde Architects </p> <br>
@@ -63,13 +63,13 @@
                 <div class="comp-container flex-row d-flex justify-content-space-between align-center  col-12 w-l00">
                     <div class="works-cover w-l00">
                         <div class="works-img img-fluid  gx-5 p-2 w-100 h-100">
-                            <img src="../images/Works+Cover.jpg" alt="Building" style="height: 100vh; width: 35rem;">
+                            <img src="./images/Works+Cover.jpg" alt="Building" style="height: 100vh; width: 35rem;">
                             <p>- Our obsession, your home</p>
                         </div>
                     </div>
                     <div class="objects w-l00">
                         <div class="blanket-img img-fluid  gx-5 p-2 h-100 w-l00">
-                            <img src="../images/Blanket.jpg" alt="Black blanket" style="height: 100vh; width: 33rem;">
+                            <img src="./images/Blanket.jpg" alt="Black blanket" style="height: 100vh; width: 33rem;">
                             <p>- Beautiful collaborations</p>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
         <section class="studio-container">
             <div class="container w-l00">
                 <div class="studio img-fluid w-100">
-                    <img src="../images/Studio.jpg" alt="Opened Book" style="height: 100vh; width: 70rem;">
+                    <img src="./images/Studio.jpg" alt="Opened Book" style="height: 100vh; width: 70rem;">
                     <p class="studio-texts fw-normal">How we work</p>
                 </div>
             </div>
@@ -91,16 +91,16 @@
             <div class="container container-fluid">
                 <div class="works-gallery w-100 d-flex flex-row justify-content-center align-center col-4 col-sm-4">
                     <div class="mini-item w-100 img-fluid gx-5 p-2">
-                        <img src="../images/001 (1).jpg" alt="Opened book" style="height: 50vh; width: 22rem;">
+                        <img src="./images/001 (1).jpg" alt="Opened book" style="height: 50vh; width: 22rem;">
                         <p>Minimalissimo Selection: Architecture</p>
                     </div>
                     <div class="sail-item w-100 img-fluid gx-5 p-2">
-                        <img src="../images/001.jpeg"  alt="sketch" style="height: 50vh; width: 22rem;">
+                        <img src="./images/001.jpeg"  alt="sketch" style="height: 50vh; width: 22rem;">
                         <p>Sail Loft</p>
                     </div>
     
                     <div class="lemon-item w-100 img-fluid gx-5 p-2">
-                        <img src="../images/Studio.jpg"  alt="studio" style="height: 50vh; width: 22rem;">
+                        <img src="./images/Studio.jpg"  alt="studio" style="height: 50vh; width: 22rem;">
                         <p>When life gives you lemons...</p>
                     </div> 
                 </div>
@@ -116,14 +116,14 @@
                         <p>Hyde + Hyde work with discerning clients around the world to both conceive and create deeply thoughtful buildings and objects</p>
                     </div>
                     <div class="square img-fluid gx-5 p-3 h-100 w-l00">
-                        <img src="../images/square.jpg" alt="square.jpg" style="width: 20rem; height: 50vh;">
+                        <img src="./images/square.jpg" alt="square.jpg" style="width: 20rem; height: 50vh;">
                     </div>
                     <div class="insight-text gx-5 p-2 w-100 bg-light w-100 fs-6"> 
                         <h4>Insight</h4>
                         <p>Wildness, luxury and authenticity weave throughout our work in the pursuit of an architecture in harmony with nature, its systems and forces</p>
                     </div>
                     <div class="asset img-fluid gx-5 p-3 h-100 w-100">
-                        <img src="../images/image-asset2.jpeg" alt="asset building" style="width: 20rem; height: 50vh;">
+                        <img src="./images/image-asset2.jpeg" alt="asset building" style="width: 20rem; height: 50vh;">
                     </div>
                 </div>  
             </div>
