--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
     </section>
 
     <section class="pages-container">
+
         <section class="home-container">
-            <div class="container container-fluid">
+            <div class="container">
                 <div class="comp-container flex-row d-flex justify-content-space-between align-center  col-12 w-l00">
                     <div class="works-cover w-l00">
                         <div class="works-img img-fluid  gx-5 p-2 w-100 h-100">
